<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:scrollbars="vertical"
    tools:context="com.pathantalabs.android.shareanywhere.EditShareActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbarFadeDuration="2000"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="16dp"
                android:text="@string/text_head"
                android:textColor="#000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:layout_centerHorizontal="true"
                android:text="@string/tag_line" />

            <TextView
                android:id="@+id/hint1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tag_text"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="42dp"
                android:text="@string/hundrad" />

            <LinearLayout
                android:id="@+id/linera1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hint1"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_back"
                    android:gravity="top|start"
                    android:inputType="textCapSentences|textMultiLine|textCapWords"
                    android:padding="8dp"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/buttonSend1"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.18"
                    android:background="@drawable/button_back"
                    android:contentDescription="@string/btn1"
                    android:src="@drawable/ic_action_send" />

            </LinearLayout>

            <TextView
                android:id="@+id/hint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linera1"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/less_hundrad" />

            <LinearLayout
                android:id="@+id/linera2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hint2"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_back"
                    android:gravity="top|start"
                    android:inputType="textMultiLine|textCapSentences|textCapWords"
                    android:padding="8dp"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/buttonSend2"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.18"
                    android:background="@drawable/button_back"
                    android:contentDescription="@string/btn2"
                    android:src="@drawable/ic_action_send" />

            </LinearLayout>


            <TextView
                android:id="@+id/hint3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linera2"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/less_nine" />

            <LinearLayout
                android:id="@+id/linera3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/hint3"
                android:orientation="horizontal"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_back"
                    android:gravity="top|start"
                    android:inputType="textMultiLine|textCapSentences|textCapWords"
                    android:padding="8dp"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

                <ImageButton
                    android:id="@+id/buttonSend3"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.18"
                    android:background="@drawable/button_back"
                    android:contentDescription="@string/btn3"
                    android:src="@drawable/ic_action_send" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background"
        android:orientation="horizontal">

        <com.google.android.gms.ads.NativeExpressAdView
            android:id="@+id/nativeAdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="FULL_WIDTHx100"
            ads:adUnitId="@string/nativeUnit" />
    </LinearLayout>
</RelativeLayout>
